tests/baselines/reference/constructSignatureWithAccessibilityModifiersOnParameters2.errors.txt
==== tests/cases/compiler/constructSignatureWithAccessibilityModifiersOnParameters2.ts (14 errors) ====
    // Parameter properties are not valid in overloads of constructors
    
    class C {
        constructor(public x, private y);
                    ~~~~~~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(4,17): error TS1040: A parameter property is only allowed in a constructor implementation.
        constructor(public x, private y) { }
                           ~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(5,24): error TS2000: Duplicate identifier 'x'.
                                      ~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(5,35): error TS2000: Duplicate identifier 'y'.
    }
    
    class C2 {
        constructor(private x);
                    ~~~~~~~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(9,17): error TS1040: A parameter property is only allowed in a constructor implementation.
        constructor(public x) { }
                           ~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(10,24): error TS2000: Duplicate identifier 'x'.
    }
    
    class C3 {
        constructor(private x);
                    ~~~~~~~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(14,17): error TS1040: A parameter property is only allowed in a constructor implementation.
        constructor(private y) { }
    }
    
    interface I {
        new (public x);
             ~~~~~~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(19,10): error TS1040: A parameter property is only allowed in a constructor implementation.
        new (public x);
             ~~~~~~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(20,10): error TS1040: A parameter property is only allowed in a constructor implementation.
    }
    
    interface I2 {
        new (private x);
             ~~~~~~~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(24,10): error TS1040: A parameter property is only allowed in a constructor implementation.
        new (private x);
             ~~~~~~~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(25,10): error TS1040: A parameter property is only allowed in a constructor implementation.
    }
    
    var a: {
        new (public x);
             ~~~~~~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(29,10): error TS1040: A parameter property is only allowed in a constructor implementation.
        new (public y);
             ~~~~~~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(30,10): error TS1040: A parameter property is only allowed in a constructor implementation.
    }
    
    var b: {
        new (private x);
             ~~~~~~~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(34,10): error TS1040: A parameter property is only allowed in a constructor implementation.
        new (private y);
             ~~~~~~~
!!! constructSignatureWithAccessibilityModifiersOnParameters2.ts(35,10): error TS1040: A parameter property is only allowed in a constructor implementation.
    }